# data-extractor

./: .env.example  .gitignore  .mcp.json  .prompts.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  ENHANCED_PDF_USAGE.md  LICENSE  MIGRATION.md  README.md  TESTING.md  TEST_RESULTS.md  VERSION_MANAGEMENT.md  bandit-report.json  mypy.ini  pyproject.toml  requirements.txt
.github/: review-prompt.txt
.github/actions/setup-python-uv/: action.yml
.github/scripts/: review-files.sh
.github/workflows/: README.md  ci.yml  dependencies.yml  publish.yml  release.yml  review.yml
docs/: 1-Framework.md  2-Development.md  2.1-Workflows.md  3-Configuration.md  3-Testing.md  4-Configuration.md  5-Commands.md  6-User-Guide.md  Commands.md  Configuration.md  Framework.md
examples/: README.md  basic_usage.py  extraction_configs.py  python_sdk_usage.py
extractor/: __init__.py  advanced_features.py  analyze_structure.py  anti_detection.py  browser_utils.py  cache.py  config.py  config_validator.py  content_extraction.py  enhanced_pdf_processor.py  error_handler.py  form_handler.py  markdown_converter.py  metrics.py  models.py  pdf_processor.py  retry.py  schemas.py  scraper.py  scraping_utils.py  sdk.py  server.py  text_utils.py  timing.py  url_utils.py  utils.py  validation_trace.py
extractor/markdown/: __init__.py  algorithm_detector.py  converter.py  formatter.py  html_preprocessor.py
extractor/pdf/: __init__.py  _imports.py  device_config.py  docling_engine.py  docling_processor.py  enhanced.py  llm_client.py  llm_orchestrator.py  math_formula.py  processor.py
extractor/tools/: __init__.py  _observability.py  _registry.py  _validation.py  extraction.py  form.py  markdown.py  pdf.py  scraping.py  service.py  stealth.py  utility.py
negentropy/perceives/: __init__.py  content_extraction.py  content_extraction_pages.py  hardware.py
negentropy/perceives/markdown/: __init__.py
negentropy/perceives/pdf/: __init__.py  llm_orchestrator.py
negentropy/perceives/tools/: service.py
scrapy_mcp/: __init__.py  advanced_features.py  config.py  scraper.py  server.py  utils.py
scripts/: run-tests.sh  setup.sh  test_langchain_blog.py  update_version.py
scripts/dev/: setup.sh
scripts/test/: run-tests.sh
src/negentropy/perceives/: __init__.py  __main__.py  _logging.py  anti_detection.py  browser_utils.py  cache.py  config.py  form_handler.py  metrics.py  parsing.py  rate_limiter.py  resilience.py  retry.py  schemas.py  scraper.py  sdk.py  server.py  text_utils.py  url_utils.py  validation_trace.py
src/negentropy/perceives/apps/: app.py
src/negentropy/perceives/content_extraction/: selectors.py
src/negentropy/perceives/infra/: __init__.py  cache.py  parsing.py  validation_trace.py
src/negentropy/perceives/markdown/: __init__.py  converter.py  formatter.py  formula_placeholder_resolver.py  html_preprocessor.py
src/negentropy/perceives/pdf/: device_config.py  docling_engine.py  docling_processor.py  enhanced.py  figure_text_filter.py  llm_client.py  llm_orchestrator.py  marker_engine.py  mineru_engine.py  processor.py
src/negentropy/perceives/scraping/: anti_detection.py  engine.py
src/negentropy/perceives/scraping/content_extraction/: selectors.py
src/negentropy/perceives/tools/: __init__.py  _registry.py  _support.py  _types.py  extraction.py  form.py  markdown.py  pdf.py  scraping.py  service.py  stealth.py
tests/: README.md  TESTING.md  Testing.md  __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_comprehensive_integration.py  test_cross_tool_integration.py  test_docling_pdf_integration.py  test_e2e_data_validation.py  test_e2e_document_pipeline.py  test_e2e_error_resilience.py  test_e2e_performance.py  test_end_to_end_integration.py  test_langchain_blog_conversion.py  test_llm_pdf_integration.py  test_mcp_tools.py  test_pdf_formula_regression.py  test_pdf_integration.py  test_updated_comprehensive_integration.py  test_updated_mcp_tools.py  tooling.py
tests/unit/: __init__.py  test_advanced_features.py  test_algorithm_detector.py  test_anti_detection.py  test_app_entrypoint.py  test_browser_utils.py  test_config.py  test_content_extraction.py  test_dependency_integrity.py  test_device_config.py  test_docling_engine.py  test_docs_commands.py  test_docs_configuration.py  test_docs_user_guide.py  test_docs_workflows.py  test_enhanced_pdf_processor.py  test_examples.py  test_form_handler.py  test_formatter_math_protection.py  test_github_workflows.py  test_html_math_preservation.py  test_infra_package.py  test_llm_client.py  test_llm_orchestrator.py  test_markdown_converter.py  test_math_formula.py  test_mcp_tools_unit.py  test_paragraph_separation.py  test_pdf_processor.py  test_pdf_table_extraction.py  test_schemas.py  test_scraper.py  test_scraper_simple.py  test_scraping_package.py  test_scraping_utils.py  test_scripts.py  test_sdk.py  test_server_entrypoint.py  test_server_mcp_tools.py  test_tool_registry.py  (+2 more)
