[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-extractor"
version = "0.1.2"
description = "A robust web scraping MCP server based on Scrapy and FastMCP"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Aurelius", email = "aureliusshu@gmail.com" }]
keywords = ["mcp", "scraping", "scrapy", "web-crawler"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp>=2.11.0",
    "scrapy>=2.11.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "requests>=2.32.0",
    "selenium>=4.20.0",
    "playwright>=1.45.0",
    "undetected-chromedriver>=3.5.0",
    "fake-useragent>=1.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "twisted>=24.7.0",
    "ruff>=0.12.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
data-extractor = "extractor.server:main"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.10.0",
    "pre-commit>=3.8.0",
    "types-requests>=2.32.4.20250809",
]
