[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["extractor*"]
exclude = ["tests*", "reports*", "htmlcov*", "scripts*"]

[project]
name = "mcp-data-extractor"
version = "0.1.6.1"
description = "A commercial-grade MCP Server built on FastMCP, offering robust capabilities to read, extract, and localize (into Markdown) content from web pages and PDFs with both text and images. It is purpose-built for long-term deployment in enterprise environments."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Aurelius", email = "aureliusshu@gmail.com" }]
license = "MIT"
keywords = ["mcp", "web-crawler", "scrapy", "pdf", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # --- MCP 框架 ---
    "fastmcp>=3.1.0",
    # --- 网页抓取 ---
    "aiohttp>=3.13.0",
    "beautifulsoup4>=4.14.0",
    "fake-useragent>=2.2.0",
    "requests>=2.33.0",
    "scrapy>=2.14.0",
    # --- 浏览器自动化 ---
    "playwright>=1.58.0",
    "selenium>=4.41.0",
    "undetected-chromedriver>=3.5.0",
    # --- PDF 处理 ---
    "markitdown>=0.1.5",
    "pymupdf>=1.27.0",
    "pypdf>=6.9.2",  # 修复 CVE-2026-33699
    # --- 数据模型与配置 ---
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    # --- 运行时基础设施 ---
    "setuptools>=82.0.0",  # undetected-chromedriver 依赖 distutils（Python 3.12+ 已移除）
]

[project.optional-dependencies]
formula = [
    "docling>=2.70.0",
]
docling = [
    "docling>=2.70.0",
]

[project.scripts]
mcp-data-extractor = "extractor.server:main"

[tool.pytest.ini_options]
minversion = "9.0"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers", 
    "--disable-warnings",
    "--tb=short",
    "-v",
    "--cov=extractor",
    "--cov-report=html:htmlcov",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-report=json:coverage.json",
    "--html=tests/reports/test-report.html",
    "--self-contained-html",
    "--json-report",
    "--json-report-file=tests/reports/test-results.json"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests", 
    "requires_network: marks tests that require network access",
    "requires_browser: marks tests that require browser setup"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["extractor"]
omit = [
    "extractor/__init__.py",
    "tests/*",
    "venv/*",
    ".venv/*",
    "setup.py"
]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Data Extractor Test Coverage Report"

[tool.coverage.xml]
output = "tests/reports/coverage.xml"

[tool.coverage.json]
output = "tests/reports/coverage.json"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    # --- 测试框架 ---
    "coverage[toml]>=7.13.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "pytest-json-report>=1.5.0",
    "pytest-mock>=3.15.0",
    "pytest-xdist>=3.8.0",
    # --- 代码质量 ---
    "mypy>=1.19.0",
    "ruff>=0.15.0",
    "types-requests>=2.32.4.20260107",
    # --- 安全审计 ---
    "bandit>=1.9.4",
    "pip-audit>=2.10.0",
    # --- 工程工具 ---
    "pre-commit>=4.5.0",
]
